--- a/nginx-includes/wildcard.fallback.conf
+++ b/nginx-includes/wildcard.fallback.conf
@@ -2,5 +2,5 @@
 ---
 
 ssl on;
-ssl_certificate {{ site.cert-path }}/wildcard-fallback.pem;
+ssl_certificate {{ site.cert-path }}/fallback.pem;
 ssl_certificate_key /etc/keys/leaf-main.key;
