Require SNI for tls-v1 and tls-v1-1 subdomains for now. Addresses #176.
In particular, this helps avoid unexpected behaviour in modern browsers.

--- a/domains/protocol/ssl-v2.conf
+++ b/domains/protocol/ssl-v2.conf
@@ -19,7 +19,7 @@ server {
 
 server {
   listen 1002;
-  server_name expired.{{ site.domain }};
+  server_name ssl-v2.{{ site.domain }};
 
   include {{ site.serving-path }}/nginx-includes/wildcard.normal.conf;
   include {{ site.serving-path }}/nginx-includes/ssl-v2.conf;
