--- a/domains/protocol/tls-v1.conf
+++ b/domains/protocol/tls-v1.conf
@@ -19,7 +19,7 @@ server {
 
 server {
   listen 1010;
-  server_name expired.{{ site.domain }};
+  server_name tls-v1.{{ site.domain }};
 
   include {{ site.serving-path }}/nginx-includes/wildcard.normal.conf;
   include {{ site.serving-path }}/nginx-includes/tls-v1.conf;
