--- a/fallback.conf
+++ b/fallback.conf
@@ -10,6 +10,8 @@ server {
 
 server {
   listen 443;
+  listen 1010; # TLS 1.0, which supports SNI
+  listen 1011; # TLS 1.1, which supports SNI
   server_name *.{{ site.domain }};
 
   include {{ site.serving-path }}/nginx-includes/wildcard.fallback.conf;
