Rename `nginx-include` files to match chain naming convention.

--- a/domains/cert/self-signed.conf
+++ b/domains/cert/self-signed.conf
@@ -11,7 +11,7 @@ server {
   listen 443;
   server_name self-signed.{{ site.domain }};
 
-  include {{ site.serving-path }}/nginx-includes/wildcard.self-signed.conf;
+  include {{ site.serving-path }}/nginx-includes/wildcard-self-signed.conf;
   include {{ site.serving-path }}/nginx-includes/tls-defaults.conf;
   include {{ site.serving-path }}/common/common.conf;
 
