--- a/domains/cert/sha1-2017.conf
+++ b/domains/cert/sha1-2017.conf
@@ -11,7 +11,7 @@ server {
   listen 443;
   server_name sha1-2017.{{ site.domain }};
 
-  include {{ site.serving-path }}/nginx-includes/wildcard.sha1-2017.conf;
+  include {{ site.serving-path }}/nginx-includes/wildcard-sha1-2017.conf;
   include {{ site.serving-path }}/nginx-includes/tls-defaults.conf;
   include {{ site.serving-path }}/common/common.conf;
 
