--- a/domains/cipher-suite/mozilla-modern.conf
+++ b/domains/cipher-suite/mozilla-modern.conf
@@ -11,7 +11,7 @@ server {
   listen 443;
   server_name mozilla-modern.{{ site.domain }};
 
-  include {{ site.serving-path }}/nginx-includes/wildcard.normal.conf;
+  include {{ site.serving-path }}/nginx-includes/wildcard-normal.conf;
   include {{ site.serving-path }}/nginx-includes/tls-mozilla-modern.conf;
   include {{ site.serving-path }}/common/common.conf;
 
