--- a/domains/misc/http.conf
+++ b/domains/misc/http.conf
@@ -21,7 +21,7 @@ server {
   listen 443;
   server_name http.{{ site.domain }};
 
-  include {{ site.serving-path }}/nginx-includes/wildcard.normal.conf;
+  include {{ site.serving-path }}/nginx-includes/wildcard-normal.conf;
   include {{ site.serving-path }}/nginx-includes/tls-defaults.conf;
 
   return 301 http://$server_name$request_uri;
