--- a/domains/misc/spoofed-favicon.badssl.com.conf
+++ b/domains/misc/spoofed-favicon.badssl.com.conf
@@ -25,7 +25,7 @@ server {
   server_name spoofed-favicon.badssl.com;
 
   include {{ site.serving-path }}/common/common.conf;
-  include {{ site.serving-path }}/nginx-includes/wildcard.normal.conf;
+  include {{ site.serving-path }}/nginx-includes/wildcard-normal.conf;
   include {{ site.serving-path }}/nginx-includes/tls-defaults.conf;
 
   location /favicons/favicon.ico { alias {{ site.serving-path }}/domains/misc/spoofed-favicon.badssl.com/favicons/favicon-$agent.ico; }
