--- a/domains/misc/www.badssl.com.conf
+++ b/domains/misc/www.badssl.com.conf
@@ -11,7 +11,7 @@ server {
   listen 443;
   server_name www.{{ site.domain }};
 
-  include {{ site.serving-path }}/nginx-includes/wildcard.normal.conf;
+  include {{ site.serving-path }}/nginx-includes/wildcard-normal.conf;
   include {{ site.serving-path }}/nginx-includes/tls-defaults.conf;
 
   return 301 https://{{ site.domain }}$request_uri;
