--- a/domains/cert/expired.conf
+++ b/domains/cert/expired.conf
@@ -11,7 +11,7 @@ server {
   listen 443;
   server_name expired.{{ site.domain }};
 
-  include {{ site.serving-path }}/nginx-includes/wildcard.expired.conf;
+  include {{ site.serving-path }}/nginx-includes/wildcard-expired.conf;
   include {{ site.serving-path }}/nginx-includes/tls-defaults.conf;
   include {{ site.serving-path }}/common/common.conf;
 
