--- a/domains/cert/incomplete-chain.conf
+++ b/domains/cert/incomplete-chain.conf
@@ -11,7 +11,7 @@ server {
   listen 443;
   server_name incomplete-chain.{{ site.domain }};
 
-  include {{ site.serving-path }}/nginx-includes/wildcard.incomplete-chain.conf;
+  include {{ site.serving-path }}/nginx-includes/wildcard-incomplete-chain.conf;
   include {{ site.serving-path }}/nginx-includes/tls-defaults.conf;
   include {{ site.serving-path }}/common/common.conf;
 
