--- a/domains/cert/rsa1024.conf
+++ b/domains/cert/rsa1024.conf
@@ -11,7 +11,7 @@ server {
   listen 443;
   server_name rsa1024.{{ site.domain }};
 
-  include {{ site.serving-path }}/nginx-includes/wildcard.rsa1024.conf;
+  include {{ site.serving-path }}/nginx-includes/wildcard-rsa1024.conf;
   include {{ site.serving-path }}/nginx-includes/tls-defaults.conf;
   include {{ site.serving-path }}/common/common.conf;
 
