--- a/domains/cert/rsa512.conf
+++ b/domains/cert/rsa512.conf
@@ -11,7 +11,7 @@ server {
   listen 443;
   server_name rsa512.{{ site.domain }};
 
-  include {{ site.serving-path }}/nginx-includes/wildcard.rsa512.conf;
+  include {{ site.serving-path }}/nginx-includes/wildcard-rsa512.conf;
   include {{ site.serving-path }}/nginx-includes/tls-defaults.conf;
   include {{ site.serving-path }}/common/common.conf;
 
