--- a/domains/cert/rsa8192.conf
+++ b/domains/cert/rsa8192.conf
@@ -11,7 +11,7 @@ server {
   listen 443;
   server_name rsa8192.{{ site.domain }};
 
-  include {{ site.serving-path }}/nginx-includes/rsa8192.conf;
+  include {{ site.serving-path }}/nginx-includes/wildcard-rsa8192.conf;
   include {{ site.serving-path }}/nginx-includes/tls-defaults.conf;
   include {{ site.serving-path }}/common/common.conf;
 
