--- a/domains/cert/untrusted-root.conf
+++ b/domains/cert/untrusted-root.conf
@@ -11,7 +11,7 @@ server {
   listen 443;
   server_name untrusted-root.{{ site.domain }};
 
-  include {{ site.serving-path }}/nginx-includes/wildcard.untrusted-root.conf;
+  include {{ site.serving-path }}/nginx-includes/wildcard-untrusted-root.conf;
   include {{ site.serving-path }}/nginx-includes/tls-defaults.conf;
   include {{ site.serving-path }}/common/common.conf;
 
