--- a/domains/cipher-suite/cbc.conf
+++ b/domains/cipher-suite/cbc.conf
@@ -11,7 +11,7 @@ server {
   listen 443;
   server_name cbc.{{ site.domain }};
 
-  include {{ site.serving-path }}/nginx-includes/wildcard.normal.conf;
+  include {{ site.serving-path }}/nginx-includes/wildcard-normal.conf;
   include {{ site.serving-path }}/nginx-includes/tls-cbc.conf;
   include {{ site.serving-path }}/common/common.conf;
 
