--- a/domains/cipher-suite/mozilla-old.conf
+++ b/domains/cipher-suite/mozilla-old.conf
@@ -11,7 +11,7 @@ server {
   listen 443;
   server_name mozilla-old.{{ site.domain }};
 
-  include {{ site.serving-path }}/nginx-includes/wildcard.sha1-2016.conf;
+  include {{ site.serving-path }}/nginx-includes/wildcard-sha1-2016.conf;
   include {{ site.serving-path }}/nginx-includes/tls-mozilla-old.conf;
   include {{ site.serving-path }}/common/common.conf;
 
