--- a/domains/cipher-suite/rc4-md5.conf
+++ b/domains/cipher-suite/rc4-md5.conf
@@ -11,7 +11,7 @@ server {
   listen 443;
   server_name rc4-md5.{{ site.domain }};
 
-  include {{ site.serving-path }}/nginx-includes/wildcard.normal.conf;
+  include {{ site.serving-path }}/nginx-includes/wildcard-normal.conf;
   include {{ site.serving-path }}/nginx-includes/tls-rc4-md5.conf;
   include {{ site.serving-path }}/common/common.conf;
 
