--- a/domains/diffie-hellman/dh2048.conf
+++ b/domains/diffie-hellman/dh2048.conf
@@ -11,7 +11,7 @@ server {
   listen 443;
   server_name dh2048.{{ site.domain }};
 
-  include {{ site.serving-path }}/nginx-includes/wildcard.normal.conf;
+  include {{ site.serving-path }}/nginx-includes/wildcard-normal.conf;
   include {{ site.serving-path }}/nginx-includes/tls-dh2048.conf;
   include {{ site.serving-path }}/common/common.conf;
 
