--- a/domains/misc/badssl.com.conf
+++ b/domains/misc/badssl.com.conf
@@ -11,7 +11,7 @@ server {
   listen 443;
   server_name {{ site.domain }};
 
-  include {{ site.serving-path }}/nginx-includes/wildcard.normal.conf;
+  include {{ site.serving-path }}/nginx-includes/wildcard-normal.conf;
   include {{ site.serving-path }}/nginx-includes/tls-defaults.conf;
   include {{ site.serving-path }}/common/common.conf;
 
