--- a/domains/misc/http-password.conf
+++ b/domains/misc/http-password.conf
@@ -17,7 +17,7 @@ server {
   listen 443;
   server_name http-password.{{ site.domain }};
 
-  include {{ site.serving-path }}/nginx-includes/wildcard.normal.conf;
+  include {{ site.serving-path }}/nginx-includes/wildcard-normal.conf;
   include {{ site.serving-path }}/nginx-includes/tls-defaults.conf;
 
   return 301 http://$server_name$request_uri;
