--- a/domains/misc/long-extended-subdomain-name-containing-many-letters-and-dashes.conf
+++ b/domains/misc/long-extended-subdomain-name-containing-many-letters-and-dashes.conf
@@ -11,7 +11,7 @@ server {
   listen 443;
   server_name long-extended-subdomain-name-containing-many-letters-and-dashes.{{ site.domain }};
 
-  include {{ site.serving-path }}/nginx-includes/wildcard.normal.conf;
+  include {{ site.serving-path }}/nginx-includes/wildcard-normal.conf;
   include {{ site.serving-path }}/nginx-includes/tls-defaults.conf;
   include {{ site.serving-path }}/common/common.conf;
 
