--- a/domains/mixed/mixed-favicon.conf
+++ b/domains/mixed/mixed-favicon.conf
@@ -18,7 +18,7 @@ server {
   listen 443;
   server_name mixed-favicon.{{ site.domain }};
 
-  include {{ site.serving-path }}/nginx-includes/wildcard.normal.conf;
+  include {{ site.serving-path }}/nginx-includes/wildcard-normal.conf;
   include {{ site.serving-path }}/nginx-includes/tls-defaults.conf;
   include {{ site.serving-path }}/common/common.conf;
 
