--- a/domains/mixed/very.conf
+++ b/domains/mixed/very.conf
@@ -11,7 +11,7 @@ server {
   listen 443;
   server_name very.{{ site.domain }};
 
-  include {{ site.serving-path }}/nginx-includes/wildcard.sha1-2017.conf;
+  include {{ site.serving-path }}/nginx-includes/wildcard-sha1-2017.conf;
   include {{ site.serving-path }}/nginx-includes/tls-cbc.conf;
   include {{ site.serving-path }}/common/common.conf;
 
