--- a/domains/protocol/ssl-v2.conf
+++ b/domains/protocol/ssl-v2.conf
@@ -11,7 +11,7 @@ server {
   listen 443;
   server_name ssl-v2.{{ site.domain }};
 
-  include {{ site.serving-path }}/nginx-includes/wildcard.normal.conf;
+  include {{ site.serving-path }}/nginx-includes/wildcard-normal.conf;
   include {{ site.serving-path }}/nginx-includes/tls-defaults.conf;
 
   return 301 https://$server_name:1002$request_uri;
@@ -21,7 +21,7 @@ server {
   listen 1002;
   server_name ssl-v2.{{ site.domain }};
 
-  include {{ site.serving-path }}/nginx-includes/wildcard.normal.conf;
+  include {{ site.serving-path }}/nginx-includes/wildcard-normal.conf;
   include {{ site.serving-path }}/nginx-includes/ssl-v2.conf;
   include {{ site.serving-path }}/common/common.conf;
 
