--- a/domains/protocol/tls-v1.conf
+++ b/domains/protocol/tls-v1.conf
@@ -11,7 +11,7 @@ server {
   listen 443;
   server_name tls-v1.{{ site.domain }};
 
-  include {{ site.serving-path }}/nginx-includes/wildcard.normal.conf;
+  include {{ site.serving-path }}/nginx-includes/wildcard-normal.conf;
   include {{ site.serving-path }}/nginx-includes/tls-defaults.conf;
 
   return 301 https://$server_name:1010$request_uri;
@@ -21,7 +21,7 @@ server {
   listen 1010;
   server_name tls-v1.{{ site.domain }};
 
-  include {{ site.serving-path }}/nginx-includes/wildcard.normal.conf;
+  include {{ site.serving-path }}/nginx-includes/wildcard-normal.conf;
   include {{ site.serving-path }}/nginx-includes/tls-v1.conf;
   include {{ site.serving-path }}/common/common.conf;
 
