--- a/domains/upgrade/https-everywhere.conf
+++ b/domains/upgrade/https-everywhere.conf
@@ -13,7 +13,7 @@ server {
   listen 443;
   server_name https-everywhere.{{ site.domain }};
 
-  include {{ site.serving-path }}/nginx-includes/wildcard.normal.conf;
+  include {{ site.serving-path }}/nginx-includes/wildcard-normal.conf;
   include {{ site.serving-path }}/nginx-includes/tls-defaults.conf;
   include {{ site.serving-path }}/common/common.conf;
 
