--- a/fallback.conf
+++ b/fallback.conf
@@ -14,7 +14,7 @@ server {
   listen 1011; # TLS 1.1, which supports SNI
   server_name *.{{ site.domain }};
 
-  include {{ site.serving-path }}/nginx-includes/wildcard.fallback.conf;
+  include {{ site.serving-path }}/nginx-includes/wildcard-fallback.conf;
   include {{ site.serving-path }}/nginx-includes/tls-defaults.conf;
 
   # Uncomment this to drop the connection.
