Migrate cert configuration for known-bad certs into nginx-includes for consistency.

--- a/domains/known-bad/dsdtestprovider.conf
+++ b/domains/known-bad/dsdtestprovider.conf
@@ -11,10 +11,7 @@ server {
   listen 443;
   server_name dsdtestprovider.{{ site.domain }};
 
-  ssl on;
-  ssl_certificate {{ site.cert-path }}/subdomain-dsdtestprovider.pem;
-  ssl_certificate_key /etc/keys/leaf-main.key;
-
+  include {{ site.serving-path }}/nginx-includes/subdomain-dsdtestprovider.conf;
   include {{ site.serving-path }}/nginx-includes/tls-defaults.conf;
   include {{ site.serving-path }}/common/common.conf;
 
