--- a/domains/known-bad/superfish.conf
+++ b/domains/known-bad/superfish.conf
@@ -11,10 +11,7 @@ server {
   listen 443;
   server_name superfish.{{ site.domain }};
 
-  ssl on;
-  ssl_certificate {{ site.cert-path }}/subdomain-superfish.pem;
-  ssl_certificate_key /etc/keys/leaf-main.key;
-
+  include {{ site.serving-path }}/nginx-includes/subdomain-superfish.conf;
   include {{ site.serving-path }}/nginx-includes/tls-defaults.conf;
   include {{ site.serving-path }}/common/common.conf;
 
