--- a/domains/protocol/tls-v1-0.conf
+++ b/domains/protocol/tls-v1-0.conf
@@ -2,14 +2,14 @@
 ---
 server {
   listen 80;
-  server_name tls-v1.{{ site.domain }};
+  server_name tls-v1-0.{{ site.domain }};
   
   return 301 https://$server_name:1010$request_uri;
 }
 
 server {
   listen 443;
-  server_name tls-v1.{{ site.domain }};
+  server_name tls-v1-0.{{ site.domain }};
 
   include {{ site.serving-path }}/nginx-includes/wildcard-normal.conf;
   include {{ site.serving-path }}/nginx-includes/tls-defaults.conf;
@@ -19,11 +19,11 @@ server {
 
 server {
   listen 1010;
-  server_name tls-v1.{{ site.domain }};
+  server_name tls-v1-0.{{ site.domain }};
 
   include {{ site.serving-path }}/nginx-includes/wildcard-normal.conf;
-  include {{ site.serving-path }}/nginx-includes/tls-v1.conf;
+  include {{ site.serving-path }}/nginx-includes/tls-v1-0.conf;
   include {{ site.serving-path }}/common/common.conf;
 
-  root {{ site.serving-path }}/domains/protocol/tls-v1;
+  root {{ site.serving-path }}/domains/protocol/tls-v1-0;
 }
