Move local-only domains into a separate folder for easier separation from prod.

--- a/nginx.conf
+++ b/nginx.conf
@@ -7,3 +7,4 @@ include {{ site.serving-path }}/fallback.conf;
 
 # Now include the known subdomains.
 include {{ site.serving-path }}/domains/*/*.conf;
+include {{ site.serving-path }}/domains-local-only/*/*.conf;
