--- a/domains-local-only/cert/rsa512.conf
+++ b/domains-local-only/cert/rsa512.conf
@@ -2,18 +2,18 @@
 ---
 server {
   listen 80;
-  server_name rsa1024.{{ site.domain }};
+  server_name rsa512.{{ site.domain }};
   
   return 301 https://$server_name$request_uri;
 }
 
 server {
   listen 443;
-  server_name rsa1024.{{ site.domain }};
+  server_name rsa512.{{ site.domain }};
 
-  include {{ site.serving-path }}/nginx-includes/wildcard-rsa1024.conf;
+  include {{ site.serving-path }}/nginx-includes/wildcard-rsa512.conf;
   include {{ site.serving-path }}/nginx-includes/tls-defaults.conf;
   include {{ site.serving-path }}/common/common.conf;
 
-  root {{ site.serving-path }}/domains/cert/rsa1024;
+  root {{ site.serving-path }}/domains-local-only/cert/rsa512;
 }
