Set basicConstraints = CA:FALSE for superfish and dsdtestprovider leaf certs. Fixes #125.

--- a/certs/src/conf/subdomain-dsdtestprovider.conf
+++ b/certs/src/conf/subdomain-dsdtestprovider.conf
@@ -13,10 +13,9 @@ organizationName    = BadSSL
 commonName          = dsdtestprovider.__DOMAIN__
 
 [ req_v3_usr ]
-basicConstraints = CA:true
+basicConstraints = CA:FALSE
 keyUsage = nonRepudiation, digitalSignature, keyEncipherment
 subjectAltName = @alt_names
 
 [ alt_names ]
 DNS.1 = dsdtestprovider.__DOMAIN__
-
