--- a/certs/src/conf/subdomain-superfish.conf
+++ b/certs/src/conf/subdomain-superfish.conf
@@ -13,7 +13,7 @@ organizationName    = BadSSL
 commonName          = superfish.__DOMAIN__
 
 [ req_v3_usr ]
-basicConstraints = CA:true
+basicConstraints = CA:FALSE
 keyUsage = nonRepudiation, digitalSignature, keyEncipherment
 subjectAltName = @alt_names
 
