--- a/common/common.conf
+++ b/common/common.conf
@@ -46,6 +46,11 @@ location /mixed/ {
   try_files $uri $uri/ =404;
 }
 
+location /self-signed-resource/ {
+  root {{ site.serving-path }}/common;
+  try_files $uri $uri/ =404;
+}
+
 location /certs/ {
   root {{ site.serving-path }}/common;
   try_files $uri $uri/ =404;
