--- a/domains/key-exchange/dh-composite.conf
+++ b/domains/key-exchange/dh-composite.conf
@@ -2,18 +2,18 @@
 ---
 server {
   listen 80;
-  server_name dh1024.{{ site.domain }};
+  server_name dh-composite.{{ site.domain }};
 
   return 301 https://$server_name$request_uri;
 }
 
 server {
   listen 443;
-  server_name dh1024.{{ site.domain }};
+  server_name dh-composite.{{ site.domain }};
 
   include {{ site.serving-path }}/nginx-includes/wildcard-normal.conf;
-  include {{ site.serving-path }}/nginx-includes/tls-dh1024.conf;
+  include {{ site.serving-path }}/nginx-includes/tls-dh-composite.conf;
   include {{ site.serving-path }}/common/common.conf;
 
-  root {{ site.serving-path }}/domains/diffie-hellman/dh1024;
+  root {{ site.serving-path }}/domains/key-exchange/dh-composite;
 }
